--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
